--- a/style.css
+++ b/style.css
@@ -1,20 +1,24 @@
-body {
-    background-image: none;
-    background-position: top left;
-    background-size: auto;
-    background-attachment: scroll;
-    background-repeat: repeat;
-    background-color: #d9d9d9;
-    color: #263333;
-    font-family: Georgia,serif;
-    font-weight: normal;
-    line-height: 1.8em;
-    font-size: 13px;
-    font-family: "livory";
-    font-size: 16px;
-    line-height: 1.6em;
-    text-transform: none;
-    font-weight: 400;
-    font-style: normal;
-    text-decoration: none;
+.menu-container {
+    display:flex;
+    justify-content:center;
 }
+intro {
+  display:flex;
+  justify-content:center;
+}
+.tagline {
+  display:flex;
+  justify-content:center;
+}
+
+.nav-bar {
+   
+    margin:10px;
+    padding:10px;
+    }
+body {background-color: #d9d9d9;}
+
+.nav-bar { color: #000000; text-decoration: none;}
+a:visited { color: #000000; text-decoration: none;}
+a:hover { color: #3366CC; text-decoration: underline;}
+a:active { color: #000000; text-decoration: none;}
