--- a/style.css
+++ b/style.css
@@ -7,7 +7,9 @@
   justify-content:center;
 }
 .name {
+    display:flex;
     font-size: 20px;
+    justify-content:center;
 }
 .tagline {
   display:flex;
