--- a/style.css
+++ b/style.css
@@ -4,9 +4,8 @@
 }
 
 .name {
-    text-align: center
-/*     display:flex;
-    justify-content:center; */
+    text-align: center;
+    font-size: 35px;
 }
 
 .tagline {
