--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body {
+    font-family: 'Gelasio', serif;
+    font-family: 'Ibarra Real Nova', serif;
+}
+
 .menu-container {
     display:flex;
     justify-content:center;
