--- a/style.css
+++ b/style.css
@@ -24,6 +24,14 @@ body {
     padding:10px;
 }
 
+p {
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
 .quote {
     width: 320px;
 }
