--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 }
 
 h2 {
-    padding: 16px;
+    padding-left:: 16px;
 }
 
 p {
@@ -34,7 +34,7 @@ p {
     margin-block-end: 1em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
-    padding: 16px;
+    padding-left:: 16px;
 }
 
 .quote {
