--- a/style.css
+++ b/style.css
@@ -16,12 +16,13 @@ body {
 .tagline {
   display:flex;
   justify-content:center;
-  
+  padding-right: 35px;
 }
 
 .nav-bar {
     margin:10px;
     padding:10px;
+    padding-right: 35px;
 }
 
 h2 {
