--- a/style.css
+++ b/style.css
@@ -50,3 +50,4 @@ body {background-color: #d9d9d9;}
 a:visited { color: #000000; text-decoration: none;}
 a:hover { color: #3366CC; text-decoration: underline;}
 a:active { color: #000000; text-decoration: none;}
+a:link { color: lilac; text-decoration: none;}
