--- a/style.css
+++ b/style.css
@@ -51,4 +51,4 @@ body {background-color: #d9d9d9;}
 a:visited { color: #000000; text-decoration: none;}
 a:hover { color: #3366CC; text-decoration: underline;}
 a:active { color: #000000; text-decoration: none;}
-a:link { color: #7C3F7C; text-decoration: none;}
+a:link { color: #7C3F7C}
