--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ p {
     width: 60vw;
 }
 
-body {background-color: #C8A2C8;}
+body {background-color: #F5E1FD;}
 
 .nav-bar { color: #000000; text-decoration: none;}
 a:visited { color: #000000; text-decoration: none;}
