--- a/style.css
+++ b/style.css
@@ -55,3 +55,22 @@ a:hover { color: #3366CC; text-decoration: underline;}
 a:active { color: #000000; text-decoration: none;}
 a { color: #7C3F7C}
 
+table {
+    border-collapse: separate;
+    text-indent: initial;
+    white-space: normal;
+    line-height: normal;
+    font-weight: normal;
+    font-size: medium;
+    font-style: normal;
+    color: -internal-quirk-inherit;
+    text-align: start;
+    border-spacing: 2px;
+    font-variant: normal;
+}
+
+tbody {
+    display: table-row-group;
+    vertical-align: middle;
+    border-color: inherit;
+}
