--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ p {
     margin-inline-end: 0px;
     width: 60vw;
     margin: 0
-    margin-left: 80px;
+/*     margin-left: 80px; */
 }
 
 li {  
